--- a/src/components/css/WeatherOfEachCity.css
+++ b/src/components/css/WeatherOfEachCity.css
@@ -18,9 +18,34 @@
   cursor: pointer;
 }
 
+.weather-display-img-container {
+  position: relative;
+}
+
 .weather-display-img {
   height: 20vw;
   width: auto;
+}
+
+.weather-display-img-container:hover .weather-display-img {
+  opacity: 0.5;
+}
+
+.weather-display-img-container:hover .refresh {
+  opacity: 1;
+}
+
+.refresh {
+  z-index: 1;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.refresh i {
+  size: 10px;
 }
 
 .weather-display-bottom-text-container {
