added each city weather detail

--- a/src/components/css/WeatherOfEachCity.css
+++ b/src/components/css/WeatherOfEachCity.css
@@ -53,6 +53,11 @@
   justify-content: space-between;
 }
 
+.weather-icon-img {
+  border: 1px solid red;
+  height: 80px;
+  width: 80px;
+}
 .weather-condition {
   float: right;
 }
